working code for CONFIRM_OFFER journeyStatus